uri package: replace deprecated methods